@@ -86,14 +86,14 @@ endif
 
 if HAVE_DYNINST
 if HAVE_MPI
-  lib_LTLIBRARIES += lib_dyn_mpitrace.la
+  lib_LTLIBRARIES += lib_dyn_mpitracec.la lib_dyn_mpitracef.la
 endif
 if WANT_OPENMP
   lib_LTLIBRARIES += lib_dyn_omptrace.la
 endif
 if HAVE_MPI
 if WANT_OPENMP
-  lib_LTLIBRARIES += lib_dyn_ompitrace.la
+  lib_LTLIBRARIES += lib_dyn_ompitracec.la lib_dyn_ompitracef.la
 endif
 endif
 endif
@@ -212,9 +212,11 @@ libsmpssmpitrace_lb_la_SOURCES = $(libmpitrace_la_SOURCES)
 libsmpssmpitracef_lb_la_SOURCES = $(libmpitrace_la_SOURCES) mpif.h
 
 # For DynInst instrumentation
-lib_dyn_mpitrace_la_SOURCES = $(libmpitrace_la_SOURCES) mpif.h
+lib_dyn_mpitracec_la_SOURCES = $(libmpitrace_la_SOURCES)
+lib_dyn_mpitracef_la_SOURCES = $(libmpitrace_la_SOURCES) mpif.h
 lib_dyn_omptrace_la_SOURCES = $(libomptrace_la_SOURCES)
-lib_dyn_ompitrace_la_SOURCES = $(libompitrace_la_SOURCES) mpif.h
+lib_dyn_ompitracec_la_SOURCES = $(libompitrace_la_SOURCES)
+lib_dyn_ompitracef_la_SOURCES = $(libompitrace_la_SOURCES) mpif.h
 
 core_MODULES = \
    $(COMMON_DIR)/libcommon.la \
@@ -283,9 +285,11 @@ libompitracef_lb_la_LIBADD = $(core_MODULES) $(INTERFACE_API) $(INTERFACES_DIR)/
 libsmpssmpitrace_lb_la_LIBADD = $(core_MODULES) $(INTERFACE_API) $(INTERFACES_DIR)/MPI/libiface_mpi_lb.la $(PARALLEL_MERGE_LIB)
 libsmpssmpitracef_lb_la_LIBADD = $(core_MODULES) $(INTERFACE_API) $(INTERFACES_DIR)/MPI/libiface_mpif_lb.la $(PARALLEL_MERGE_LIB)
 
-lib_dyn_mpitrace_la_LIBADD = $(core_MODULES) $(INTERFACE_API) $(INTERFACES_DIR)/MPI/lib_dyn_iface_mpi.la $(PARALLEL_MERGE_LIB)
+lib_dyn_mpitracec_la_LIBADD = $(core_MODULES) $(INTERFACE_API) $(INTERFACES_DIR)/MPI/lib_dyn_iface_mpic.la $(PARALLEL_MERGE_LIB)
+lib_dyn_mpitracef_la_LIBADD = $(core_MODULES) $(INTERFACE_API) $(INTERFACES_DIR)/MPI/lib_dyn_iface_mpif.la $(PARALLEL_MERGE_LIB)
 lib_dyn_omptrace_la_LIBADD = $(core_MODULES) $(INTERFACE_API) $(SEQUENTIAL_MERGE_LIB)
-lib_dyn_ompitrace_la_LIBADD = $(core_MODULES) $(INTERFACE_API) $(INTERFACES_DIR)/MPI/lib_dyn_iface_mpi.la $(PARALLEL_MERGE_LIB)
+lib_dyn_ompitracec_la_LIBADD = $(core_MODULES) $(INTERFACE_API) $(INTERFACES_DIR)/MPI/lib_dyn_iface_mpic.la $(PARALLEL_MERGE_LIB)
+lib_dyn_ompitracef_la_LIBADD = $(core_MODULES) $(INTERFACE_API) $(INTERFACES_DIR)/MPI/lib_dyn_iface_mpif.la $(PARALLEL_MERGE_LIB)
 
 #
 # Compilation flags
@@ -394,9 +398,11 @@ libompitracef_lb_la_CFLAGS = $(core_INCLUDES) $(core_CFLAGS) $(EXTRA_OMP_CFLAGS)
 libsmpssmpitrace_lb_la_CFLAGS = $(core_INCLUDES) $(core_CFLAGS) @MPI_CFLAGS@ $(MPITRACE_SYMBOLS) -DSMPSS_SUPPORT -DMPI_SUPPORT $(PARALLEL_CFLAGS_MERGE_LIB)
 libsmpssmpitracef_lb_la_CFLAGS = $(core_INCLUDES) $(core_CFLAGS) @MPI_CFLAGS@ -DFORTRAN_SYMBOLS -DSMPSS_SUPPORT -DMPI_SUPPORT $(PARALLEL_CFLAGS_MERGE_LIB)
 
-lib_dyn_mpitrace_la_CFLAGS = $(core_INCLUDES) $(core_CFLAGS) @MPI_CFLAGS@ -DC_SYMBOLS -DFORTRAN_SYMBOLS -DMPI_SUPPORT -DDYNINST_MODULE $(PARALLEL_CFLAGS_MERGE_LIB)
+lib_dyn_mpitracec_la_CFLAGS = $(core_INCLUDES) $(core_CFLAGS) @MPI_CFLAGS@ $(MPITRACE_SYMBOLS) -DMPI_SUPPORT -DDYNINST_MODULE $(PARALLEL_CFLAGS_MERGE_LIB)
+lib_dyn_mpitracef_la_CFLAGS = $(core_INCLUDES) $(core_CFLAGS) @MPI_CFLAGS@ $(MPITRACE_SYMBOLS) -DFORTRAN_SYMBOLS -DMPI_SUPPORT -DDYNINST_MODULE $(PARALLEL_CFLAGS_MERGE_LIB)
 lib_dyn_omptrace_la_CFLAGS = $(core_INCLUDES) $(core_CFLAGS) $(EXTRA_OMP_CFLAGS) -DDYNINST_MODULE -DOMP_SUPPORT $(SEQUENTIAL_CFLAGS_MERGE_LIB)
-lib_dyn_ompitrace_la_CFLAGS = $(core_INCLUDES) $(core_CFLAGS) @MPI_CFLAGS@ $(EXTRA_OMP_CFLAGS) -DC_SYMBOLS -DFORTRAN_SYMBOLS -DMPI_SUPPORT -DDYNINST_MODULE -DOMP_SUPPORT $(PARALLEL_CFLAGS_MERGE_LIB)
+lib_dyn_ompitracec_la_CFLAGS = $(core_INCLUDES) $(core_CFLAGS) @MPI_CFLAGS@ $(EXTRA_OMP_CFLAGS) $(MPITRACE_SYMBOLS) -DMPI_SUPPORT -DDYNINST_MODULE -DOMP_SUPPORT $(PARALLEL_CFLAGS_MERGE_LIB)
+lib_dyn_ompitracef_la_CFLAGS = $(core_INCLUDES) $(core_CFLAGS) @MPI_CFLAGS@ $(EXTRA_OMP_CFLAGS) $(MPITRACE_SYMBOLS) -DFORTRAN_SYMBOLS -DMPI_SUPPORT -DDYNINST_MODULE -DOMP_SUPPORT $(PARALLEL_CFLAGS_MERGE_LIB)
 
 #
 # Link flags
@@ -447,9 +453,11 @@ libompitracef_lb_la_LDFLAGS = $(libompitrace_la_LDFLAGS)
 libsmpssmpitrace_lb_la_LDFLAGS = $(libmpitrace_la_LDFLAGS)
 libsmpssmpitracef_lb_la_LDFLAGS = $(libmpitrace_lb_la_LDFLAGS) # -static
 
-lib_dyn_mpitrace_la_LDFLAGS = $(libmpitrace_la_LDFLAGS)
+lib_dyn_mpitracec_la_LDFLAGS = $(libmpitrace_la_LDFLAGS)
+lib_dyn_mpitracef_la_LDFLAGS = $(libmpitrace_la_LDFLAGS)
 lib_dyn_omptrace_la_LDFLAGS = $(COMMON_LINKER_FLAGS)
-lib_dyn_ompitrace_la_LDFLAGS = $(lib_dyn_mpitrace_la_LDFLAGS)
+lib_dyn_ompitracec_la_LDFLAGS = $(lib_dyn_mpitrace_la_LDFLAGS)
+lib_dyn_ompitracef_la_LDFLAGS = $(lib_dyn_mpitrace_la_LDFLAGS)
 
 ## -static tells libtool to generate ONLY the static library (we don't want
 ##   the libmpitracef.so because it don't preloads fine with programs)
