@@ -17,7 +17,7 @@ if GENERATE_LOAD_BALANCING
   noinst_LTLIBRARIES += libiface_mpif_lb.la libiface_mpi_lb.la
 endif
 if HAVE_DYNINST
-  noinst_LTLIBRARIES += lib_dyn_iface_mpi.la
+  noinst_LTLIBRARIES += lib_dyn_iface_mpic.la lib_dyn_iface_mpif.la
 endif
 
 if SINGLE_MPI_LIBRARY
@@ -34,8 +34,11 @@ libiface_mpif_la_CFLAGS  = $(iface_MPI_INCLUDES) -DFORTRAN_SYMBOLS -DMPI_SUPPORT
 
 ## DynInst modules
 
-lib_dyn_iface_mpi_la_SOURCES = $(iface_MPI_SRCS)
-lib_dyn_iface_mpi_la_CFLAGS  = $(iface_MPI_INCLUDES) $(MPITRACE_SYMBOLS) -DMPI_SUPPORT -DDYNINST_MODULE -DFORTRAN_SYMBOLS -DC_SYMBOLS
+lib_dyn_iface_mpif_la_SOURCES = $(iface_MPI_SRCS)
+lib_dyn_iface_mpif_la_CFLAGS  = $(iface_MPI_INCLUDES) $(MPITRACE_SYMBOLS) -DMPI_SUPPORT -DDYNINST_MODULE -DFORTRAN_SYMBOLS
+
+lib_dyn_iface_mpic_la_SOURCES = $(iface_MPI_SRCS)
+lib_dyn_iface_mpic_la_CFLAGS  = $(iface_MPI_INCLUDES) $(MPITRACE_SYMBOLS) -DMPI_SUPPORT -DDYNINST_MODULE
 
 ## LoadBalancing Libraries
 
@@ -43,4 +46,4 @@ libiface_mpi_lb_la_SOURCES = $(iface_MPI_SRCS)
 libiface_mpi_lb_la_CFLAGS  = $(iface_MPI_INCLUDES) $(MPITRACE_SYMBOLS) -I$(LOAD_BALANCING_HOME)/include -DENABLE_LOAD_BALANCING -DMPI_SUPPORT
 
 libiface_mpif_lb_la_SOURCES = $(iface_MPI_SRCS)
-libiface_mpif_lb_la_CFLAGS  = $(iface_MPI_INCLUDES) -DFORTRAN_SYMBOLS -I$(LOAD_BALANCING_HOME)/include -DENABLE_LOAD_BALANCING -DMPI_SUPPORT
+libiface_mpif_lb_la_CFLAGS  = $(iface_MPI_INCLUDES) $(MPITRACE_SYMBOLS) -DFORTRAN_SYMBOLS -I$(LOAD_BALANCING_HOME)/include -DENABLE_LOAD_BALANCING -DMPI_SUPPORT
