@@ -1,6 +1,7 @@
 
 ChangeLog
  [ + added, - removed, * changed ]
+ * 01Dec2011 Improved support for DynInst (C&Fortran bugs in MT)
  * 01Dec2011 Improved support for instrumenting NANOS+MPI
  * 30Nov2011 Increased verbosity of papi_best_set
  * 14Nov2011 Added support to MAC OS X and improved support to FreeBSD
